# publib

./: .gitignore  BSDmakefile  ChangeLog  ChangeLog.old  Changes  GNUmakefile  Makefile.in  NEWS  README  TODO  configure.ac  distcheck.mk  echoexec.sh  link-alternative-names
alloc/: dynarr.c  xmalloc.c  xmemdup.c  xrealloc.c  xstrdup.c
base64/: README  base64.c
bitarr/: ba_destroy.c  ba_not.c  ba_or_not_ba.c  ba_query.c
cmp/: cmp.c
debian/: Default.config  changelog  control  copyright  docs  rules
errormsg/: errormsg.c
files/: README  fassert.c  xfopen.c
fname/: fnbase.c  fndelbeg.c  fnhome.c  fnlastsuf.c  fnpathfind.c  fnqualify.c  test_fnqualify.c
framework/: Blurb  Default.config  Generic.mk  Makefile.in  README  Rules.mk.in  TODO  configure  configure.in  link-alternative-names
framework/Template/: Makefile  manpage
framework/autom4te.cache/: output.0  requests  traces.0
hash/: hash_destroy.c  hash_install.c  hash_lookup.c
includes/: publib.h
includes/publib/: bitarr.h  errormsg.h  fname.h  main.h  nntp.h  queue.h  sbuf.h
iset/: iset_add.c  iset_add_rng.c  iset_contains.c  iset_create.c  iset_destroy.c  iset_isect.c  iset_range.c  iset_remove.c  iset_union.c
liw/alloc/: Makefile  README  alloc.h  dynarr.3  dynarr.c  memdup.c  xfree.c  xmalloc.3  xmalloc.c  xmemdup.c  xrealloc.c  xstrdup.c
liw/base64/: Makefile  README  base64.c  base64.h
liw/bitarr/: Makefile  README  ba_and_ba.c  ba_clear.c  ba_clear_all.c  ba_copy.c  ba_create.c  ba_destroy.c  ba_not.c  ba_or_ba.c  ba_or_not_ba.c  (+6 more)
lockfile/: lockfile.c
log/: test-log.c
main/: main_filter.c  test-main-filter.c
man/: __set_liberror.3  bitarr.3  cmp.3  dynarr.3  errormsg.3  files.3  fname.3  fnpathfind.3  fnqualify.3  hash.3  iset.3  log.3  memarrfill.3  memdel.3  memfill.3  memins.3  memisort.3  memmem.3  memoverlap.3  memrchr.3  memrev.3  memrmem.3  memshuffle.3  memswap.3  publib.3  stack.3  stracat.3  stranaxfrm.3  strchange.3  strcins.3  strcstr.3  strdel.3  strdiff.3  strend.3  strendzap.3  strgsub.3  strhash.3  strinit.3  strins.3  strltrim.3  (+24 more)
nntp/: nntpart.c
priq/: priq.c  test-priq.c
queue/: test-queue.c
sbuf/: sbuf.c  sbuf_aux.c  test-colmark.c  test-sbuf.c
stack/: README  stack_copy.c  stack_destroy.c  stack_emptyp.c  stack_push.c
strutil/: README  memdel.c  memfill.c  memmem.c  memrchr.c  memrmem.c  memshuffle.c  memswap.c  strcenter.c  strchange.c  strcins.c  strcstr.c  strdiff.c  strend.c  strgsub.c  strhash.c  strltrim.c  strmaxcpy.c  strmtrim.c  strndup.c  strnlen.c  stroverlap.c  strright.c  strrot13.c  strrstr.c  strset.c  strshuffle.c  strsplit.c  strtabify.c  struntabify.c  strzap.c
tbuf/: make-tbuf-stats  split-sbuf-stats  tbuf.c  test_tbuf.c
(+260 files in other folders)
